--- a/alteraid.html
+++ b/alteraid.html
@@ -15,8 +15,7 @@
 
 <body>
     <p id="paragrafo" style="color:green">Melhor time do Mundo!!</p>
-    <button type="button" onclick="mFuncao();" style="background-color:greenyellow  
-    color(white)">Translate</button>
+    <button type="button" onclick="mFuncao();" style="background-color:greenyellow">Translate</button>
 </body>
 
 </html>
