--- a/lampada.html
+++ b/lampada.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lâmpada</title>
+    <script>
+        function trocaImagem(){
+            var elemento = document.getElementById("lamp");
+            if (elemento.src.match("bulbon")){
+                elemento.src = "https://www.w3schools.com/js/pic_bulboff.gif";
+            } else {
+                elemento.src = "https://www.w3schools.com/js/pic_bulbon.gif"
+            }
+        }
+    </script>
 </head>
 <body>
     <h2>Clique na Lâmpada para acender e apagar</h2>
