--- a/alteraid.html
+++ b/alteraid.html
@@ -8,13 +8,13 @@
     <script>
         function mFuncao() {
             var x = document.getElementById("paragrafo");
-            x.innerHTML = "Palmeiras";
+            x.innerHTML = "Melhor time do Mundo!!";
         }
     </script>
 </head>
 
 <body>
-    <p id="paragrafo" style="color:green">Melhor time do Mundo!!</p>
+    <p id="paragrafo" style="color:green">Palmeiras!!</p>
     <button type="button" onclick="mFuncao();" style="background-color:greenyellow">Translate</button>
 </body>
 
