--- a/lampada.html
+++ b/lampada.html
@@ -18,5 +18,7 @@
 <body>
     <h2>Clique na Lâmpada para acender e apagar</h2>
     <img  id="lamp" onclick="trocaImagem()" src="https://www.w3schools.com/js/pic_bulboff.gif" >
+
+    <button onclick="window.print()">Imprimir</button>
 </body>
 </html>
