--- a/somausuario.html
+++ b/somausuario.html
@@ -27,6 +27,19 @@
         var resultado = num1 * num2;
 
         var resultado = num1 / num2;
+
+        // Meu resultado
+        var soma = num1 + num2;
+        var subtração = num1 - num2;
+        var multiplicação = num1 * num2;
+        var divisão = num1 / num2;
+
+        alert("Resultados: \n" +
+         "Soma é = " + soma + "\n" +
+         "Subtração é =" + subtração + "\n" +
+         "Multiplicação é = " + multiplicação + "\n" +
+         "Divisão é = " + divisão
+        )
     </script>
 </body>
 
